[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nm-lisp"
version = "0.0.5"
authors = [
    { name="ninjamar" },
]
description = "test"
requires-python = ">=3.10"
classifiers = [
   "Programming Language :: Python :: 3.10",
   "Operating System :: OS Independent",
   "LICENSE :: MIT"
]

[tool.setuptools]
py-modules = ["nm"]

[project.scripts]
nm = "nm:cli"